# ThinkOS-Client

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: add-auto-updater.md  (+48 more)
backend/: alembic.ini  pyproject.toml  run.py  think.spec
backend/app/: config.py  events.py  main.py  models.py  models_info.py  native_messaging.py  native_messaging_win.py  schemas.py
backend/app/db/: __init__.py  core.py  crud.py  migrations.py  search.py
backend/app/db/crud/: __init__.py  analytics.py  conversations.py  graph.py  insights.py  links.py  media.py  memories.py  settings.py  tags.py
backend/app/routes/: __init__.py  analytics.py  auth.py  chat.py  conversations.py  document.py  graph.py  insights.py  jobs.py  links.py  media.py  memories.py  notes.py  settings.py  video.py
backend/app/services/: __init__.py  ai.py  ai_processing.py  audio_storage.py  cache.py  document_storage.py  document_utils.py  embeddings.py  jobs.py  memory_filtering.py  query_processing.py  query_rewriting.py  secrets.py  special_handlers.py  suggestions.py  transcription.py  video_storage.py
backend/app/services/ai/: __init__.py  client.py  processing.py  query_rewriting.py  suggestions.py
backend/app/services/embeddings/: __init__.py  client.py  jobs.py
backend/app/services/graph/: __init__.py  analytics.py  builder.py  insights.py
backend/app/services/links/: __init__.py  suggestions.py
backend/app/services/media/: __init__.py  audio_storage.py  audio_utils.py  document_storage.py  transcription.py  video_storage.py
backend/app/services/query/: __init__.py  special_handlers.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
backend/native_host/: stub.c  stub.py  stub_launcher.c  stub_win.py  stub_win.spec
backend/native_host/manifests/: com.think.native.firefox.json  com.think.native.json
backend/scripts/: decrypt_db.py
(+107 files in other folders)
