[tool.poetry]
name = "think-backend"
version = "0.1.2"
description = "Think backend API"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12,<3.14"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
openai = "^1.54.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
pysqlcipher3 = "^1.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
sqlite-vec = "^0.1.0"
numpy = "^2.0.0"
# Windows-only: pywin32 for native messaging stub
pywin32 = {version = "^306", markers = "sys_platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
