[tool.poetry]
name = "think-backend"
version = "0.7.2"
description = "Think backend API"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12,<3.13"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
openai = "^1.54.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
rotki-pysqlcipher3 = "^2024.10.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
sqlite-vec = "^0.1.0"
numpy = "^2.0.0"
# Voice memory support
faster-whisper = "^1.0.0"
mutagen = "^1.47.0"
cryptography = "^43.0.0"
# Document memory support
pypdf = "^5.0.0"       # BSD-3-Clause - PDF text extraction
pillow = "^11.0.0"     # PIL-like license - image processing
# Windows-only: pywin32 for native messaging stub
pywin32 = {version = "^306", markers = "sys_platform == 'win32'"}
python-multipart = "^0.0.21"
pypdfium2 = "^5.3.0"
networkx = "^3.2"
cachetools = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
